--- a/Clarified Theme/Clarified.css
+++ b/Clarified Theme/Clarified.css
@@ -1,6 +1,6 @@
 /**
  * "Clarified" by Valerio Lyndon
- * v2.3.1
+ * v2.3.2
  * 
 ***TABLE*OF*CONTENTS***
  * 
@@ -139,9 +139,9 @@ select {
 select,
 #advanced-options select,
 #advanced-options select:disabled {
-	background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%23888888'><polygon points='0,0 100,0 50,50'/></svg>");
+	background-image: url(https://i.imgur.com/WUoqKmx.png);
 	background-size: 10px auto;
-	background-position: calc(100% - 6px) calc(50% + 3px);
+	background-position: calc(100% - 6px) 50%;
 	background-repeat: no-repeat;
 }
 
