--- a/Tilt Theme/Theme.css
+++ b/Tilt Theme/Theme.css
@@ -1,6 +1,6 @@
 /**
  * "Tilt" by Valerio Lyndon
- * Revision 10.2
+ * Revision 10.3
  * 
  * = TABLE OF CONTENTS =
  * 
@@ -325,14 +325,14 @@ a:hover {
 
 .status-menu-container .status-menu .status-button.on, .status-menu-container .status-menu .status-button:hover, .list-menu-float .icon-menu:hover { color: var(--text-highlight); }
 
-.status-menu-container .status-menu .status-button:not(:nth-of-type(3n)), .icon-menu:not(:nth-of-type(3n))
+.status-menu-container .status-menu .status-button:not(:nth-of-type(3n)), .icon-menu:not(:nth-of-type(3))
 { margin-right: 15px; }
 .status-menu-container .status-menu .status-button:nth-of-type(4), .icon-menu:nth-of-type(1)
 { margin-left: 15px; }
 
 .status-menu-container .status-menu .status-button:nth-of-type(3n+1), .icon-menu:nth-of-type(3n+1)
 { text-align: right; }
-.status-menu-container .status-menu .status-button:nth-of-type(3n), .icon-menu:nth-of-type(3n)
+.status-menu-container .status-menu .status-button:nth-of-type(3n), .icon-menu:nth-of-type(3), .icon-menu.logout
 { text-align: left; }
 
 .status-menu .status-button:before, .icon-menu:before { font-size: 14px; }
@@ -353,7 +353,8 @@ a:hover {
 .icon-menu.history:before { content: "History"; }
 .icon-menu.logout:before { content: "Logout"; }
 
-.status-menu .status-button:after { display: none !important; }
+.status-menu .status-button:after, .icon-menu.statistics
+{ display: none !important; }
 
 
 
