Brink v2.1.2 Fix Type display
fix Type column displaying poorly when Number column is also enabled.

regression from v2.1.0 e483364e8007059def4de587808622220186b2b8

--- a/Brink Theme/Brink.css
+++ b/Brink Theme/Brink.css
@@ -1,5 +1,5 @@
 /* "Brink" by Valerio Lyndon
- * Version 2.1.1
+ * Version 2.1.2
  * 
  * = TABLE OF CONTENTS =
  * 
@@ -1284,7 +1284,7 @@ tbody:first-of-type {
 .data:not(
 	.status,
 	.image,
-	.type,
+	.type:not(.number~.type),
 	.number,
 	.title,
 	.score,
@@ -1309,7 +1309,7 @@ tbody:first-of-type {
 .data:not(
 	.status,
 	.image,
-	.type,
+	.type:not(.number~.type)
 	.number,
 	.title,
 	.score,
